<resources>
    <string name="app_name">DUR</string>
    <string name="textFooter">bir gençlik hareketi</string>
    <string name="new_account">Hesap Oluştur</string>
    <string name="name">Ad</string>
    <string name="mail">Mail</string>
    <string name="pass">Şifre</string>
    <string name="pass_confirmed">Şifreyi Doğrulayın</string>
    <string name="sign_up">KAYDOL</string>
    <string name="have_account">Hesabım Var</string>
    <string name="welcome">Hoş Geldiniz</string>
    <string name="continue_for_app">Devam etmek için giriş yapın</string>
    <string name="sign_in">GİRİŞ YAP</string>
    <string name="create_new_account">Yeni Hesap Oluştur</string>
    <string name="forgot_pass">Şifremi Unuttum</string>
    <string name="put_mail">Mail Adresinizi Giriniz</string>
    <string name="send">GÖNDER</string>
    <string name="share_us">Bizimle Paylaş</string>
    <string name="posts">Gönderiler</string>
    <string name="mail_box">Gelen Kutusu</string>
    <string name="emergency">ACİL YARDIM</string>
    <string name="postsText">Gönüllü hukuçu ve psikologlarımıza içinde bulunduğunuz durum ile ilgili danışmak istediğiniz konularda sorularınızı sorabilir, başınıza gelenleri anlatıp onlardan danışmanlık alabilirsiniz. </string>
    <string name="lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English</string>
    <string name="choice_post">Gönderiniz paylaşılsın mı ?</string>
    <string name="write_here">Buraya yazabilirsin...</string>
    <string name="share">PAYLAŞ</string>
    <string name="posts_text">Gönderiler</string>
    <string name="message_box">Gelen Kutun</string>
    <string name="notice">Duyurular</string>
    <string name="empty_text">Bir şey bulamadık :/</string>
    <string name="put_number">Numara Giriniz</string>
    <string name="emergencyInfoText">Tehdit altında kaldığınız durumlarda kaydettiğiniz numaralara konum / adres bilgilerinizi SMS yoluyla gönderebilirsiniz</string>
    <string name="anonymous">Anonim Kullanıcı</string>
    <string name="close">KAPAT</string>
    <string name="sharePostTextAlert">Yazınızı ve gönüllülerimizden aldığınız cevapları yararlanmaları için diğer kullanıcılarımızla paylaşıma açabilirsiniz. Yayınlanmayan gönderiler sadece gönüllü hukukçu ve psikologlarımızla paylaşılır. Gönderilerin hepsi anonim olarak yayınlanacaktır.</string>
    <string name="popup_mail_verification_text">Gönderiler kısmına ulaşmak için mail adresinizin onaylı olması gerekmektedir. Onay maili göndermek için aşağıdaki butona basınız.</string>
    <string name="page1Text">Beni <b>ANLA</b>\nBeni <b>DİNLE</b>\nmücadeleme destek ol diyen herkesin yanında olmak için buradayız. Burası biraz daha uzun mu olsa ne bilemedim ama boş bir şeyler yazarak doldurmayı planlıyorum çünkü aklıma yazacak bir şey gelmiyor fakat bu şekilde de hızılıca doluyor teşekkürler hamit</string>
    <string name="page2Text">Biz bu uygulamayı hayata geçirmek için bir araya gelmiş üniversite öğrencileri uygulamamızda gönüllü yer alan psikologlarımız, avukatlarımız ve birbirine manevi destek olan kullanıcılarımızla şiddetin her türünün karşısında <b>DUR</b>-an ve bu yolda birlikte yürüyen bir aileyiz!</string>
    <string name="page3Text">Her yaş, cinsiyet, cinsel kimlik, cinsel yönelim ve ırktan kullanıcının başlarına gelen psikolojik, cinsel, dijital, ekonomik, fiziksel  şiddet olaylarını <b>ANONİM</b> şekilde paylaşarak gönüllü psikolog ve hukukçularımızdan danışmanlık, bilgi, yönlendirme alabileceği, aklındaki her türlü soruya cevap arayabileceği bu platformda <b>BİRBİRİMİZE DESTEK OLUYORUZ</b>.</string>
    <string name="fr_2_title">BİZ KİMİZ ?</string>
    <string name="fr_3_title">Yalnız Değilsin</string>
    <string name="no_internet_text">İnternete Bağlanamadık</string>
    <string name="sad">:(</string>
    <string name="try_again">Tekrar Dene</string>
    <string name="exit">ÇIKIŞ YAP</string>
    <string name="system_updating">Sistem Güncelleniyor</string>
    <string name="closed">Kapalıyız :(</string>

</resources>