<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/noConnLottie"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_48sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/fixing"
        app:lottie_repeatCount="1000" />

    <TextView
        android:id="@+id/noConnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/system_updating"
        android:textColor="@color/primary"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/noConnLottie"
        app:layout_constraintStart_toStartOf="@id/noConnLottie"
        app:layout_constraintTop_toBottomOf="@id/noConnLottie" />

    <TextView
        android:id="@+id/noConnText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/closed"
        android:textColor="@color/primary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/noConnLottie"
        app:layout_constraintStart_toStartOf="@id/noConnLottie"
        app:layout_constraintTop_toBottomOf="@id/noConnText" />

    <Button
        android:id="@+id/exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:background="@color/primary"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/noConnText"
        app:layout_constraintStart_toStartOf="@id/noConnText"
        app:layout_constraintTop_toBottomOf="@id/noConnText2" />


</androidx.constraintlayout.widget.ConstraintLayout>