<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/primary"
    android:padding="@dimen/_12sdp">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/background_fragments"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_24sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background">

        <ImageView
            android:id="@+id/imageFR"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/logo_p3"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/stringTitle"/>

        <TextView
            android:id="@+id/stringTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageFR"
            android:text="@string/fr_3_title"
            android:textAlignment="center"
            android:textSize="@dimen/_28ssp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/stringContentLayout"
            android:textStyle="bold"/>

        <ScrollView
            android:id="@+id/stringContentLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/stringTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scrollbars="none">

            <TextView
                android:id="@+id/stringContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/page3Text"
                android:textSize="@dimen/_15ssp"
                android:textAlignment="center"
                android:padding="@dimen/_16sdp"/>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_blank"
                android:contentDescription="@string/app_name"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@drawable/circle_blank"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@drawable/circle_filled"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

        <ImageView
            android:id="@+id/skipFr"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_round_navigate_next_24"
            app:tint="@color/white"
            android:onClick="skipFr" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>